@@ -1,5 +1,8 @@
 [b]Version 0.6.7[/b]:
 
+(2009-01-18)
+ * The dvdnav actions are now only enabled when playing a dvd (using dvdnav).
+
 (2009-01-17)
  * Now the mplayer process is not restarted when loading an external subtitle
    file (using the sub_load slave command), except for idx/sub subtitles. 
